# ctune

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CheckList.md  PKGBUILD  README.md  docker-compose.sh  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/inputs/: CMakeUninstall.in
cmake/modules/: Findffmpeg.cmake  Findlame.cmake  Findpipewire.cmake  Findsndio.cmake  Findvlc.cmake
cmake/scripts/: update_mandb.sh
docker/run/: Dockerfile
docs/: CMakeLists.txt
docs/design/: ctune_core.puml  ctune_ui.puml  logger.puml
docs/guide/: ctune.cfg.md  mouse_navigation.md
docs/man/: ctune.1.md
libraries/logger/: CMakeLists.txt
libraries/logger/src/: LogQueue.c  LogQueue.h  LogWriter.c  LogWriter.h  Logger.c  Logger.h
plugins/input/ffmpeg/: CMakeLists.txt
plugins/input/ffmpeg/src/: ffmpeg.c
plugins/input/vlc/: CMakeLists.txt
plugins/input/vlc/src/: vlc.c
plugins/output/alsa/: CMakeLists.txt
plugins/output/alsa/src/: alsa.c
plugins/output/mp3/: CMakeLists.txt
plugins/output/mp3/src/: mp3lame.c
plugins/output/pipewire/: CMakeLists.txt
plugins/output/pipewire/src/: pipewire.c
plugins/output/pulseaudio/: CMakeLists.txt
plugins/output/pulseaudio/src/: pulse.c
plugins/output/sdl/: CMakeLists.txt
plugins/output/sdl/src/: sdl.c
plugins/output/sndio/: CMakeLists.txt
plugins/output/sndio/src/: sndio.c
plugins/output/wave/: CMakeLists.txt
plugins/output/wave/src/: wave.c
src/: CMakeLists.txt  Controller.c  Controller.h  ctune_err.c  ctune_err.h  main.c
src/audio/: AudioOut.h  FileOut.h  OutputFormat.h  alsa.c  channel_position.h  output_format.h  pulse.c  sdl.c  sndio.c
src/cli/: CLI.c  CLI.h
src/cmake/: cmake_vars.h
src/datastructure/: CircularBuffer.c  CircularBuffer.h  Deque.c  Deque.h  HashMap.c  HashMap.h  ServerList.c  ServerList.h  StrList.c  StrList.h  String.c  String.h  Vector.c  Vector.h
src/dto/: ArgOptions.c  ArgOptions.h  CategoryItem.c  CategoryItem.h  ClickCounter.c  ClickCounter.h  ColourTheme.c  ColourTheme.h  Field.h  NewRadioStation.c  NewRadioStation.h  PluginInfo.h  RadioBrowserFilter.c  RadioBrowserFilter.h  RadioStationInfo.c  RadioStationInfo.h  RadioStationVote.c  RadioStationVote.h  ServerConfig.c  ServerConfig.h  ServerStats.c  ServerStats.h  UIConfig.c  UIConfig.h
src/enum/: ByCategory.c  ByCategory.h  FileState.h  Flag.c  Flag.h  ListCategory.c  ListCategory.h  MouseInterval.c  MouseInterval.h  MouseResolution.c  MouseResolution.h  PlaybackCtrl.c  PlaybackCtrl.h  PluginType.c  PluginType.h  SearchCtrl.h  StationAttribute.c  StationAttribute.h  StationSrc.c  StationSrc.h  UIPreset.c  UIPreset.h
src/fs/: PlaybackLog.c  PlaybackLog.h  Plugin.c  Plugin.h  Settings.c  Settings.h  XDG.c  XDG.h  fs.c  fs.h
src/logger/: LogWriter.c  Logger.c  Logger.h
src/network/: NetworkUtils.c  NetworkUtils.h  RadioBrowser.c  RadioBrowser.h
src/parser/: JSON.c  JSON.h  KVPairs.c  KVPairs.h
src/player/: Player.h  RadioPlayer.c  RadioPlayer.h  ffmpeg.c  vlc.c
src/ui/: EventQueue.c  EventQueue.h  Resizer.c  Resizer.h  UI.c  UI.h
src/ui/datastructure/: KeyBind.h  KeyInfo.h  WindowMargin.h  WindowProperty.h
src/ui/definitions/: Icons.c  Icons.h  KeyBinding.c  KeyBinding.h  KeyDescription.c  KeyDescription.h  Language.c  Language.h  Theme.c  Theme.h
src/ui/dialog/: ContextHelp.c  ContextHelp.h  OptionsMenu.c  OptionsMenu.h  RSEdit.c  RSEdit.h  RSFind.c  RSFind.h  RSInfo.c  RSInfo.h  SetOutputDir.c  SetOutputDir.h
src/ui/enum/: ActionID.h  ContextID.h  EventType.c  EventType.h  FormExit.h  IconID.h  InputKeyID.h  KeyboardKeyID.h  PanelID.c  PanelID.h  TextID.h
src/ui/types/: ScrollMask.c  ScrollMask.h  WinCtrlMask.c  WinCtrlMask.h
src/ui/widget/: BorderWin.c  BorderWin.h  Dialog.c  Dialog.h  Form.c  Form.h  ScrollBar.c  ScrollBar.h  ScrollWin.c  ScrollWin.h  SlideMenu.c  SlideMenu.h
src/ui/window/: BrowserWin.c  BrowserWin.h  MainWin.c  MainWin.h  RSListWin.c  RSListWin.h
src/utils/: Timeout.c  Timeout.h  utilities.c  utilities.h
